# Week2

./: pyproject.toml
01_TimeSeries/: TimeSeries_Exercises.ipynb  TimeSeries_Tutorial.ipynb
02_SignalProcessing/: SignalProcessing_Exercises.ipynb  SignalProcessing_Tutorial.ipynb
