[tool.poetry]
name = "week2"
version = "0.1.0"
description = ""
authors = ["Yubo Cao <cao2006721@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
tqdm = "^4.66.4"
rich = "^13.7.1"
matplotlib = "^3.9.1"
statsmodels = "^0.14.2"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = {extras = ["jupyter", "server"], version = "^24.4.2"}
isort = "^5.13.2"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
